--- a/hms_module/views/hms_doctors_views.xml
+++ b/hms_module/views/hms_doctors_views.xml
@@ -27,7 +27,7 @@
             <field name="view_mode">tree,form</field>
         </record>
 
-        <menuitem id="menu_hms_doctor_root" name="HMS"/>
-        <menuitem id="menu_hms_doctor" name="Doctors" parent="menu_hms_doctor_root" action="action_hms_doctor"/>
+        <menuitem id="menu_hms" name="HMS"/>
+        <menuitem id="menu_hms_doctor" name="HMS Doctors" parent="menu_hms" action="action_hms_doctor"/>
     </data>
 </odoo>
