--- a/hms_module/views/hms_patient_views.xml
+++ b/hms_module/views/hms_patient_views.xml
@@ -40,6 +40,6 @@
         <field name="view_mode">tree,form</field>
     </record>
 
-    <menuitem id="menu_hms_patient_root" name="HMS"/>
-    <menuitem id="menu_hms_patient" name="Patients" parent="menu_hms_patient_root" action="action_hms_patient"/>
+    <menuitem id="menu_hms" name="HMS"/>
+    <menuitem id="menu_hms_patient" name="Patients" parent="menu_hms" action="action_hms_patient"/>
 </data>
